Resources/Public/Stylesheets/custom.css
/*------------------------------------------------------------------
Project:    Highland
Author:     Yevgeny S.
URL:        http://simpleqode.com/
            https://twitter.com/YevSim
Version:    1.5.0
Created:        11/03/2014
Last change:    20/02/2015
-------------------------------------------------------------------*/

html, body {
	font-family: 'Lato', sans-serif;
	height: 100%;
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Lato', sans-serif;
}

h1.hl, h2.hl, h3.hl, h4.hl, h5.hl, h6.hl {
	color: #515151;
	font-weight: 300;
	text-transform: uppercase;
}

footer h1.hl, footer h2.hl, footer h3.hl, footer h4.hl, footer h5.hl, footer h6.hl {
	colorr: #FFFFFF;
}

h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
	text-transform: none;
}

.csc-header > h2, .csc-header > h3, .csc-header > h4, .csc-header > h5, .csc-header > h6 {
	padding-bottom: 20px;
	border-bottom: 1px solid #eee;
	margin-bottom: 20px;
}

.csc-header > h2, .csc-header > h3, .csc-header > h4, .csc-header > h5, .csc-header > h6 {
	padding-bottom: 20px;
	border-bottom: 1px solid #eee;
	margin-bottom: 20px;
}

.csc-header {
	margin-top: 30px;
}

.csc-header-n1 {
	margin-top: 0px;
}

/* ===== Sticky Footer Trick ===== */

.wrapper {
	min-height: 100%;
	height: auto !important; /* for older versions of IE */
	height: 100%;
	margin-bottom: -347px; /* showing the footer */
	padding-top: 50px;
	padding-bottom: 347px; /* avoiding content go behind the footer */
}

/* ===== Navbar ===== */

#menuMain {
	height: auto;
}

.navbar-inverse {
	background-color: #515151;
	border: none;
}

.navbar-inverse .navbar-nav > .active > a,
.navbar-inverse .navbar-nav > .active > a:hover,
.navbar-inverse .navbar-nav > .active > a:focus {
	color: #fff;
	font-weight: bold;
	background-color: #515151;
}

.navbar-inverse .navbar-brand {
	color: #EEEEEE;
}

.navbar-inverse .navbar-nav > li > a {
	color: #EEEEEE;
}

.navbar-inverse {
	font-family: 'Lato', sans-serif;
	text-transform: uppercase;
	font-size: 12px;
}

.navbar-inverse .navbar-nav > .dropdown > a .caret {
	border-top-color: #EEEEEE;
	border-bottom-color: #EEEEEE;
}

.navbar-inverse .navbar-nav > .open > a .caret,
.navbar-inverse .navbar-nav > .open > a:hover .caret,
.navbar-inverse .navbar-nav > .open > a:focus .caret {
	border-top-color: #515151;
	border-bottom-color: #515151;
}

.navbar-inverse .navbar-nav > .open > a,
.navbar-inverse .navbar-nav > .open > a:hover,
.navbar-inverse .navbar-nav > .open > a:focus {
	background-color: #EEEEEE;
	color: #515151;
}

.dropdown-menu {
	background-color: #EEEEEE;
	border: 1px solid #D6D6D6;
	border-top-color: #EEEEEE;
	border-radius: 0px;
	-webkit-box-shadow: none;
	box-shadow: none;
}

.dropdown-menu > li > a {
	color: #515151;
	padding: 10px 20px;
	font-size: 12px;
}

.dropdown-menu > li > a:hover,
.dropdown-menu > li > a:focus {
	color: #FFF;
	background-color: #515151;
}

.dropdown-menu > .active > a,
.dropdown-menu > .active > a:hover,
.dropdown-menu > .active > a:focus {
	background-color: #515151;
}

/* ===== Showcase ===== */

#wrap,
.hp-slider {
	height: 480px;
	background: url(../Images/bg3.jpg) no-repeat center center;
	background-size: cover;
	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../Images/bg3.jpg', sizingMethod='scale');
	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../Images/bg3.jpg', sizingMethod='scale')";
	border-bottom: 1px solid #eee;
	color: #fff;
}

#wrap h1,
.hp-slider h1 {
	font-family: 'Lato', sans-serif;
	font-weight: 100;
	font-size: 48px;
	margin-top: 70px;
	text-transform: uppercase;
	margin-left: 70px;
	text-shadow: 1px 1px 3px #666;
}

.showcase {
	position: relative;
	width: 438px;
	height: 300px;
	margin: 90px auto;
}

.iMac {
	position: absolute;
	height: 300px;
	width: 351px;
	top: 0;
	right: 0;
	-webkit-animation-duration: 1s;
	-moz-animation-delay: 1s;
}

.iPad {
	position: absolute;
	height: 228px;
	width: 174px;
	top: 75px;
	left: 0;
	-webkit-animation-duration: 1.3s;
	-moz-animation-delay: 1.3s;
}

.iPhone {
	position: absolute;
	height: 152px;
	width: 56px;
	top: 145px;
	left: 130px;
	-webkit-animation-duration: 1.6s;
	-moz-animation-delay: 1.6s;
}

.macbook img {
	width: 450px;
	margin: 105.5px auto 0;
}

.list {
	margin: 50px 0 50px 70px;
}

.list ul {
	list-style-type: none;
	padding: 0;
}

.list li {
	font-weight: 100;
	font-size: 28px;
}

.list li > span {
	background: rgba(0, 0, 0, 0.25);
	padding: 5px 10px;
	line-height: 1.8;
}

.list li i.fa {
	margin-right: 20px;
}

.first {
	-webkit-animation-duration: 1s;
	-moz-animation-duration: 1s;
}

.second {
	-webkit-animation-duration: 1.3s;
	-moz-animation-duration: 1.3s;
}

.third {
	-webkit-animation-duration: 1.6s;
	-moz-animation-duration: 1.6s;
}

.fourth {
	-webkit-animation-duration: 1.9s;
	-moz-animation-duration: 1.9s;
}

.delay {
	-webkit-animation-delay: 0.5s;
	-moz-animation-delay: 0.5s;
}

/* ===== Services ===== */

.services {
	margin-top: 10px;
}

.services__item {
	padding: 0 0 1px 0;
	background: white;
	overflow: hidden;
}

.services__item::last-item {
	padding: 0;
}

.services-item__body {
	padding: 20px;
	background: #eee;
	text-align: center;
	color: #888;
}

.services-item__caption {
	display: block;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	margin-bottom: 0;
}

.services__item:hover .services-item__link,
.services__item:hover .services-item__link:hover,
.services__item:hover .services-item__link:focus {
	color: white;
}

.services__item:hover .services-item__body {
	background: #69D2E7;
	color: white;
}

#topcontrol {
	position: fixed;
	bottom: 5px;
	right: 5px;
	opacity: 1;
	cursor: pointer;
}

@media (min-width: 768px) {
	.services__item {
		width: 20%;
		float: left;
		padding: 0 1px 0 0;
	}
}
/* ... */

